tmbr-web/Public/Styles/Shared/main.css
/* ... */
:is(button, a).icon > svg {
    width: 20px;
    max-height: 17px;
    opacity: 0.65;
}

:is(button, a).icon.small > svg {
    width: 14px;
    max-height: 12px;
}

:is(button, a).icon.active > svg,
:is(button, a).icon > svg:hover {
    opacity: 1;
}

:is(button, a).icon:hover {
    background: none;
    filter: none;
}

.note-badge {
    font-size: 1.2rem;
    opacity: 0.65;
}

/*
 ------------------------------------------------
 Mobile adjustments
 ------------------------------------------------
 */

@media screen and (max-width: 600px) {
    main {
        padding: calc(env(safe-area-inset-top) + 20px) 1.2em 20px 1.2em;
    }
    
    main > section > ul.counted > a > li {
        grid-template-columns: 1.4em 1fr;
        grid-template-rows: auto auto;
    }

    main > section > ul.counted > a > li > span.post-id {
        grid-column: 1;
        grid-row: 1;
    }

    main > section > ul.counted > a > li > span.post-title {
        grid-column: 2;
        grid-row: 1;
    }

    main > section > ul.counted > a > li > span.post-date {
        grid-column: 2;
        grid-row: 2;
        text-align: left;
    }
    
    main article blockquote {
        margin-inline-start: 20px;
        margin-inline-end: 20px;
    }
    
    main article > a > svg.signature {
        transform: translateX(-12px);
    }
    
    main article > header {
        display: flex;
        flex-direction: column-reverse;
        align-items: initial;
        gap: 2em;
    }
    
    main article > header .artwork {
        justify-content: center;
    }
}

@supports (height: 100dvh) {
    html, body {
        min-height: 100dvh;
    }
}

